
Version 0.23, released UNRELEASED; a BETA release
-------------------------------------------------

USER VISIBLE CHANGES:

* `restore` now shows a progress bar.
* `fsck` now has more useful progress reporting, and does more checking,
  including the integrity of the contents of file content.
* `force-lock` now gives a warning if the client does not exist in the
  repository.

DEVELOPER CHANGES:

* New `--sftp-delay=100` option can be used to simulate SFTP backups over
  networks with long round trip times.

INTERNAL CHANGES:

* Got rid of terminal status plugin. Now, the `Application` class provides
  a `ttystatus.TerminalStatus` instance instead, in the `ts` attribute.
  Other plugings are supposed to use that for progress reporting and
  messaging to the user.
* The `posix_fadvise` system call is used only if available. This should
  improve Obnam's portability a bit.

Version 0.22, released 2011-08-25; a BETA release
-------------------------------------------------

USER VISIBLE CHANGES:

* Obnam now reports its current configuration in the log file at startup.
  This will hopefully remove one round of "did you use the --foo option?"
  questions between developers and bug reporters.

BUG FIXES:

* The repository is now unlocked on exit only if it is still locked.
* A wrongly caught `GeneratorExit` is now dealt with properly.
* Keyboard interrupts are logged, so they don't show up as anonymous errors.

CHANGES RELEVANT TO DEVELOPERS ONLY:

* `setup.py` has been enhanced to work more like the old `Makefile` did:
  `clean` removes more artifacts. Instructions in `README` have been updated
  to point at `setup.py`.
* Compiler warning about `_XOPEN_SOURCE` re-definition fixed.
* Tests are now again run during a Debian package build.

Version 0.21, released 2011-08-23; a BETA release
-------------------------------------------------

USER VISIBLE CHANGES:

* Obnam will now unlock the repository if there's an error during a backup.